apps/test-case/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-case
  annotations:
    e2e.preview.sonia.so/config-pr-patched: "true"
  labels:
    app.kubernetes.io/name: test-case
    app.kubernetes.io/part-of: preview-e2e
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: test-case
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-case
        app.kubernetes.io/part-of: preview-e2e
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: web
          image: ghcr.io/notniknot/web-apps:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 30m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 160Mi
