apps/test-case/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-case
  labels:
    app.kubernetes.io/name: test-case
spec:
  selector:
    app.kubernetes.io/name: test-case
  ports:
    - name: http
      port: 8080
      targetPort: http
