apps/test-case/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-case
  labels:
    app.kubernetes.io/name: test-case
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: north-south
      namespace: kgateway-system
  hostnames:
    - test-case.playground.sonia-certs.uk
  rules:
    - backendRefs:
        - name: test-case-pr-renamed
          port: 80
